<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>frmCustomPie</class>
 <widget class="QWidget" name="frmCustomPie">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>500</width>
    <height>300</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item row="0" column="0">
    <widget class="CustomPie" name="customPie1" native="true"/>
   </item>
   <item row="0" column="1">
    <widget class="CustomPie" name="customPie2" native="true"/>
   </item>
   <item row="1" column="0">
    <widget class="CustomPie" name="customPie3" native="true"/>
   </item>
   <item row="1" column="1">
    <widget class="CustomPie" name="customPie4" native="true"/>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>CustomPie</class>
   <extends>QWidget</extends>
   <header>custompie.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
